# ffai

./: .gitignore  .readthedocs.yaml  AGENTS.md  LICENSE  README.md  docker-compose.dev.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.opencode/commands/: update-docs.md
chroma_db/: chroma.sqlite3
config/: main.yaml  paths.yaml
examples/: message_stack.ipynb  message_stack_live.ipynb
examples/_rag_data/: api_docs.md  download.py  python_tutorial.md
examples/agent_tools_and_validation/: agent_tools_and_validation.ipynb
examples/async_dag_executor/: async_dag_executor.ipynb
examples/conditional_execution/: __init__.py  conditional_execution.ipynb  run.py
examples/conversation_management/: conversation_management.ipynb
examples/dag_validation/: __init__.py  dag_validation.ipynb  run.py
examples/history_analytics/: history_basics.ipynb  history_search_report.ipynb
examples/memory_basics/: memory_basics.ipynb
examples/memory_ffai_integration/: memory_ffai_integration.ipynb
examples/memory_persistence/: memory_persistence.ipynb
examples/multi_turn_sequence/: multi_turn_sequence.ipynb  run.py
examples/rag_chunking/: hierarchical_vs_flat.ipynb  text_chunking.ipynb
examples/rag_embeddings/: embeddings_and_similarity.ipynb  local_embeddings_fastembed.ipynb
examples/rag_pipeline/: rag_pipeline.ipynb
examples/rag_search/: hybrid_search_and_reranking.ipynb
examples/response_options_api/: response_options_api.ipynb
examples/structured_output/: structured_output.ipynb  structured_output_litellm.ipynb
examples/vector_stores/: backend_comparison.ipynb  qdrant_cloud.ipynb  qdrant_local.ipynb  qdrant_memory.ipynb  qdrant_server.ipynb
examples/workflow_basics/: workflow_basics.ipynb
examples/workflow_multi_client/: workflow_multi_client.ipynb
ffai/: ConversationHistory.py  FFAI.py  FFAIClientBase.py  OrderedPromptHistory.py  __init__.py  config.py
ffai/Clients/: FFLiteLLMClient.py  FFMistralSmall.py  __init__.py
ffai/agent/: __init__.py  agent_loop.py
ffai/core/: __init__.py  _async.py  async_client_base.py  condition_evaluator.py  graph.py  history_exporter.py  history_manager.py  response_options.py  workflow_engine.py
ffai/observability/: log_context.py  telemetry.py
ffai/rag/: __init__.py  _async.py  embed.py  litellm_generate.py  rag.py  store.py  types.py
ffai/tools/: __init__.py  tool_registry.py
ffai/workflow/: __init__.py  client_factory.py  executor.py  loader.py  spec.py  tabular.py  tabular_airtable.py  tabular_csv.py
scripts/: _nb_memory_basics.py  _nb_memory_ffai_integration.py  _nb_memory_persistence.py  _nb_workflow_basics.py  _nb_workflow_multi_client.py  add_docstrings.py  generate_api_docs.py  generate_sphinx_docs.py
src/: FFAI.py  __init__.py  config.py
src/Clients/: AsyncFFLiteLLMClient.py  BaseLiteLLMClient.py  FFLiteLLMClient.py  FFMistralSmall.py  __init__.py
src/agent/: response_validator.py
src/core/: __init__.py  async_executor.py  client_base.py  condition_evaluator.py  conversation_manager.py  prompt_node.py  (+10 more)
tests/: conftest.py  test_agent_loop.py  test_async_executor.py  test_async_fflitellm_client.py  test_base_litellm_client.py  test_condition_evaluator.py  test_config.py  test_conversation_history.py  test_conversation_manager.py  test_dag_integration.py  test_ffai.py  test_ffai_query.py  test_fflitellm_client.py  test_ffmistralsmall.py  test_graph.py  test_graph_execution_helpers.py  test_history_exporter.py  test_history_recorder.py  test_history_restore_and_retry_fix.py  test_memory_facade.py  test_memory_ffai_wiring.py  test_memory_persist.py  test_memory_turn_store.py  test_memory_types.py  test_message_stack.py  test_model_defaults.py  test_observability.py  test_permanent_history.py  test_prompt_builder.py  test_prompt_utils.py  test_rag.py  test_rag_async.py  test_rag_async_bridge.py  test_rag_bm25.py  test_rag_client.py  test_rag_client_adapter.py  test_rag_config.py  test_rag_embed.py  test_rag_embeddings.py  test_rag_format.py  (+34 more)
(+100 files in other folders)
